--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   path_provider: ^2.0.11
   share_plus: ^4.0.10+1
   loading_animation_widget: ^1.2.0+2
-  screenshot: ^1.2.3
+  screenshot: ^2.1.0
   crypto: ^3.0.2
   http: ^0.13.5
   get_storage: ^2.0.3
@@ -53,6 +53,7 @@ dependencies:
   rxdart: ^0.27.7
   firebase_messaging: ^14.2.1
   cached_network_image: ^3.2.3
+  package_info_plus: any
 
   
   
